add implementJar (tests not working)